--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin">16dp</dimen>
-    <dimen name="mid_margin">22dp</dimen>
-    <dimen name="big_margin">24dp</dimen>
-    <dimen name="bigger_margin">32dp</dimen>
-    <dimen name="big_text_size">24sp</dimen>
+    <dimen name="horizontal_margin">16dp</dimen>
+    <dimen name="standard_spacing">8dp</dimen>
     <dimen name="medium_text_size">20sp</dimen>
-    <dimen name="text_size">16sp</dimen>
 </resources>
