--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,115 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/big_margin"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusableInTouchMode="true"
-    tools:context="com.wilderpereira.lmgtfygen.presentation.MainActivity">
+    tools:context="com.wilderpereira.lmgtfygen.presentation.main.MainActivity">
 
-    <ImageView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/lmgtfy_logo"/>
+        android:layout_height="0dp"
+        android:clickable="true"
+        android:focusableInTouchMode="true"
+        android:layout_gravity="center_vertical">
 
-    <LinearLayout
-        android:layout_marginLeft="@dimen/big_margin"
-        android:layout_marginRight="@dimen/big_margin"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
-        <TextView
-            android:gravity="center_vertical"
-            android:textSize="@dimen/big_text_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/search_type"/>
-        
-        <Spinner
-            android:gravity="bottom"
-            android:layout_gravity="end|center_vertical"
-            android:textSize="@dimen/big_text_size"
-            android:id="@+id/searchTypeSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        
-    </LinearLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_marginTop="@dimen/margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:textSize="@dimen/medium_text_size"
-            android:layout_marginLeft="@dimen/mid_margin"
-            android:layout_marginRight="@dimen/big_margin"
-            android:id="@+id/searchEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/search" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.v7.widget.AppCompatCheckBox
-        app:buttonTint="@android:color/darker_gray"
-        android:id="@+id/internetExplainerCb"
-        android:textColor="@android:color/secondary_text_light"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/include_internet_explainer"/>
-
-    <LinearLayout
-        android:weightSum="10"
-        android:layout_marginLeft="@dimen/big_margin"
-        android:layout_marginRight="@dimen/big_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_gravity="center"
-            android:textSize="@dimen/text_size"
-            android:text="@string/lmgtfy_base_url"
-            android:id="@+id/generatedUrlTv"
-            android:layout_weight="9"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
         <ImageView
-            android:onClick="copyToClipboard"
-            android:src="@drawable/ic_content_copy"
-            android:layout_weight="1"
+            android:id="@+id/imageView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/lmgtfy_logo"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            app:layout_constraintBottom_toTopOf="@+id/searchTypeSpinner"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"/>
 
-    <LinearLayout
-        android:layout_margin="@dimen/margin"
-        android:gravity="end"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <Spinner
+            android:id="@+id/searchTypeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="@dimen/standard_spacing"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            app:layout_constraintBottom_toTopOf="@+id/searchBarInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:layout_marginTop="@dimen/standard_spacing"
+            app:layout_constraintLeft_toRightOf="@+id/textView"/>
 
-        <Button
-            android:onClick="shortenUrl"
-            android:id="@+id/shortenBtn"
-            android:text="@string/shorten"
+        <CheckBox
+            android:id="@+id/includeInternetExplorerCb"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/include_internet_explainer"
+            android:textSize="16sp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            app:layout_constraintBottom_toTopOf="@+id/generatedUrlTv"
+            app:layout_constraintTop_toBottomOf="@+id/searchBarInputLayout"
+            android:layout_marginTop="@dimen/standard_spacing"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/generatedUrlTv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toLeftOf="@+id/copyButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toTopOf="@+id/shareButton"
+            app:layout_constraintTop_toBottomOf="@+id/includeInternetExplorerCb"
+            android:layout_marginTop="@dimen/standard_spacing"
+            android:layout_marginBottom="@dimen/standard_spacing"/>
+
+        <ImageButton
+            android:id="@+id/copyButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="?selectableItemBackgroundBorderless"
+            app:srcCompat="@drawable/ic_content_copy"
+            app:layout_constraintTop_toTopOf="@+id/generatedUrlTv"
+            app:layout_constraintBottom_toBottomOf="@+id/generatedUrlTv"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            android:contentDescription="@string/copy"
+            app:layout_constraintVertical_bias="0.428"/>
 
         <Button
-            android:textColor="@android:color/white"
-            android:backgroundTint="@color/colorAccent"
-            android:onClick="shareUrl"
-            android:id="@+id/shareBtn"
+            android:id="@+id/shareButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/share"
+            android:theme="@style/BlueButton"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/generatedUrlTv"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <Button
+            android:id="@+id/shortenButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/standard_spacing"
+            android:layout_marginTop="@dimen/standard_spacing"
+            android:text="@string/shorten"
+            app:layout_constraintBottom_toBottomOf="@+id/shareButton"
+            app:layout_constraintRight_toLeftOf="@+id/shareButton"
+            app:layout_constraintTop_toTopOf="@+id/shareButton"
+            app:layout_constraintVertical_bias="1.0"/>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:text="@string/search_type"
+            android:textSize="@dimen/medium_text_size"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/searchTypeSpinner"
+            app:layout_constraintBottom_toBottomOf="@+id/searchTypeSpinner"/>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/searchBarInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/horizontal_margin"
+            android:layout_marginRight="@dimen/horizontal_margin"
+            android:layout_marginTop="@dimen/standard_spacing"
+            android:hint="@string/search"
+            app:layout_constraintBottom_toTopOf="@+id/includeInternetExplorerCb"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchTypeSpinner"
+            tools:text="Where's Waldo?">
 
-</LinearLayout>
+            <EditText
+                android:id="@+id/searchBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:maxLines="3"
+                android:scrollHorizontally="false"
+                tools:text="Where's Waldo?"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
